--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "sty": "^0.6.1",
-    "three": "^0.113.2",
-    "three-gltf-loader": "^1.111.0"
+    "three": "^0.113.2"
   }
 }
