--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "fs-extra": "^8.1.0",
     "sty": "^0.6.1",
     "three": "^0.113.2"
   }
